--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
+<link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 
@@ -16,7 +16,8 @@
 <main>
     <div>
         <h1 class="headline">Как выпивают животные</h1>
-        <div class="subheader">Исследования биологов, доказывающие, что животные могут быть алкоголиками</div>
+        <div class="subheader">Исследования биологов, доказывающие, 
+            что животные могут быть алкоголиками</div>
         <img id="panda" src="panda.png" alt="panda picture">
         <div class="intro">
             Шимпанзе не только не упускают возможности побаловаться алкоголем, но и самостоятельно изготавливают
